# ZeroCache

./: .gitignore  CLAUDE.md  Cargo.toml  PRD.md  README.md  decisions.md
demo/: package-lock.json  package.json
demo/langchain-ts/: .gitignore  package-lock.json  package.json  tsconfig.json
demo/langchain-ts/src/: battle-test.ts  logging-fetch.ts  rag.ts  zerocache-config.ts
demo/mastra/: .gitignore  package.json  test-embed.mjs
demo/mastra/src/mastra/workflows/: duplicate-finder.ts
demo/src/mastra/: index.ts
zerocache-adapters-gemini/: Cargo.toml
zerocache-adapters-gemini/src/: lib.rs
zerocache-adapters-mistral/: Cargo.toml
zerocache-adapters-mistral/src/: lib.rs
zerocache-adapters-openai/: Cargo.toml
zerocache-adapters-openai/src/: lib.rs
zerocache-adapters-redis/: Cargo.toml
zerocache-adapters-redis/src/: lib.rs
zerocache-adapters-sled/: Cargo.toml
zerocache-adapters-sled/src/: lib.rs
zerocache-core/: Cargo.toml
zerocache-core/src/: cache_key.rs  lib.rs  normalize.rs  owner_id.rs  reconcile.rs
zerocache-http/: Cargo.toml
zerocache-http/src/: app.rs  config.rs  main.rs  wire.rs
zerocache-ports/: Cargo.toml
zerocache-ports/src/: lib.rs
