[workspace]
resolver = "2"
members = [
    "zerocache-core",
    "zerocache-ports",
    "zerocache-adapters-sled",
    "zerocache-adapters-redis",
    "zerocache-adapters-openai",
    "zerocache-adapters-mistral",
    "zerocache-adapters-gemini",
    "zerocache-http",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
