[package]
name = "zerocache-adapters-gemini"
version.workspace = true
edition.workspace = true

[dependencies]
zerocache-ports = { path = "../zerocache-ports" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
httpmock = "0.7"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
