[package]
name = "zerocache-http"
version.workspace = true
edition.workspace = true

[dependencies]
zerocache-core = { path = "../zerocache-core" }
zerocache-ports = { path = "../zerocache-ports" }
zerocache-adapters-sled = { path = "../zerocache-adapters-sled" }
zerocache-adapters-redis = { path = "../zerocache-adapters-redis" }
zerocache-adapters-openai = { path = "../zerocache-adapters-openai" }
zerocache-adapters-mistral = { path = "../zerocache-adapters-mistral" }
zerocache-adapters-gemini = { path = "../zerocache-adapters-gemini" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
prometheus = "0.13"
async-trait = "0.1"
